--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
+@* <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div> *@
+
+
+<div class="d-flex flex-column  justify-content-center align-items-center">
+    <div class="row col-md-4 mb-3">
+        <h1>Bienvenido</h1>
+    </div>
+
+    <div class="row col-md-4 ">
+        <a class="btn btn-primary mb-3" asp-controller="Users" asp-action="Index">Usuarios</a>
+        <a class="btn btn-success" asp-controller="Products" asp-action="Index">Productos</a>
+    </div>
 </div>
