--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -10,8 +10,8 @@
 
     <div class="col-md-8 d-flex justify-content-end align-items-end">
 
-        <form class="form-inline d-flex mb-3" asp-action="Index" asp-controller="Users" method="get">
-            <input class="form-control mr-sm-2 me-2" type="text" placeholder="Ingrese nombre" name="Search">
+        <form class="form-inline d-flex mb-3" asp-action="Index" asp-controller="Users" method="post">
+            <input class="form-control mr-sm-2 me-2" type="text" placeholder="Buscar" name="Search">
             <input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Buscar">
         </form>
     </div>
