method post in form create

--- a/Views/Users/Create.cshtml
+++ b/Views/Users/Create.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Crear un nuevo usuario</h1>
 
-<form asp-action="CreateUser" method="get">
+<form asp-action="CreateUser" method="post">
     <div class=" form-group">
         <label for="">Nombres</label>
         <input asp-for="Name" class="form-control">
